--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "grunt": "~0.3.9"
   },
   "devDependencies": {
-    "grunt": "~0.3.9"
+    "grunt": "~0.4.0",
+    "grunt-contrib-clean": "~0.4.0",
+    "grunt-contrib-jshint": "~0.1.0"
   },
   "keywords": [
     "gruntplugin"
